# aria2-ext

./: .drone.yml  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  aria2-ext.db  banner.txt  bun.lockb  docker-compose.yml  go.mod  go.sum  init.sql  main.go  package.json
.github/workflows/: docker-image.yml
aria2/: Client.go
dao/: Conn.go  File.go  Rss.go
job/: DownloadJob.go  ParseJob.go
migrations/2023-10-17-110625_subscription/: down.sql  up.sql
migrations/2023-10-17-110714_file/: down.sql  up.sql
net/: Rss.go
plug-in/: RssPlugin.go
plugin/: IPlugin.go  Plugins.go  RssPlugin.go
plugin/default/: RssPlugin.go
src/: banner.rs  config.ts  db.rs  engine.rs  entries.rs  index.ts  lib.rs  main.rs  plugin.rs  rss.rs  schema.rs  server.ts
src/lib/: bot.ts  db.ts  downloader.ts  entry.d.ts  rss.ts  sse.ts
test/: aria2_test.go
