[package]
name = "aria2-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aria2-ws = "0.4.0"
chrono = "0.4.31"
cron = "0.12.0"
diesel = { version = "2.1.3", features = ["sqlite","chrono"] }
env_logger = "0.10.0"
libloading = "0.8.1"
log = "0.4.20"
regex = "1.10.2"
reqwest = {version =  "0.11.22" ,features = ["blocking","json"]}
serde = { version = "1.0.189", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.108"
signal-hook = "0.3.17"
tokio = { version = "1.33.0", features = ["full"] }

[lib]
name = "default_plugin"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "aria2-ext"
path = "src/main.rs"
